[tool.poetry]
authors = ["Simon Boivin <sboivin@systra.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pybind11 = "^3.0.1"


[build-system]
requires = ["setuptools>=42", "wheel", "pybind11>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "boostpy"           # Must match setup.py extension name
version = "0.15"
description = "Fast Dijkstra using Boost Graph Library"
authors = [
  { name = "Simon Boivin", email = "sboivin@systra.com" }
]

[tool.cibuildwheel]
# Which architectures to build for (e.g., x86_64, aarch64)
archs = ["auto"]

# Exclude some older or less common Python versions
#skip = ["cp36-*", "cp37-*", "cp38-*", "cp39-*", "pp*", "*-musllinux*"]
skip = ["*-musllinux*"]

build = ["cp312-*"]
